--- a/locales/az.json
+++ b/locales/az.json
@@ -1,3 +1,6 @@
 {
-    "about":"Haqqımızda"
+    "about":"Haqqımızda",
+    "anasehife":"Ana səhifə",
+    "product":"Məhsullar",
+    "contact":"Əlaqə"
 }
