--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,3 +1,6 @@
 {
-        "about":"о нас"
+        "about": "О нас",
+        "anasehife": "Главная",
+        "product": "Продукты",
+        "contact": "Контакты"
 }
