--- a/locales/az.json
+++ b/locales/az.json
@@ -1,6 +1,73 @@
 {
-    "about":"Haqqımızda",
-    "anasehife":"Ana səhifə",
-    "product":"Məhsullar",
-    "contact":"Əlaqə"
+    "about": "Haqqımızda",
+    "anasehife": "Ana səhifə",
+    "product": "Məhsullar",
+    "contact": "Əlaqə",
+    "Blog": "Bloq",
+    "thefuture": "Gələcəyin mebel brendi",
+    "thefuture2": "zamansız dizaynlarla",
+    "view": "Kolleksiyaya bax",
+    "introtext1": "Avelon ilə ekoloji cəhətdən təmiz mebelin yeni dövrü, Fransız lüks pərakəndə markası",
+    "introtext2": "gözəl şriftlər, zərif rənglər və rəqəmsal dünyada məhsulların mükəmməl təqdimatı ilə",
+    "introtext3": "müasir veb texnologiyalarından istifadə edərək.",
+    "brandcardtitle": "Brendimizi fərqləndirən nədir",
+    "ceramictitle": "Yeni keramikalar",
+    "popularcardtitle": "Ən məşhur məhsullarımız",
+    "acardiontitle": "Burada marağınızı artırın",
+    "benefittitle": "Kluba qoşulun və üstünlüklərdən yararlanın",
+    "benefittitle1": "Bülletenimizə abunə olun və yeni",
+    "benefittitle2": "məhsul çeşidləri, endirimlər, pop-up mağazalar və daha çoxu üçün eksklüziv təkliflər əldə edin",
+    "signup": "Qeydiyyatdan keç",
+    "london1": "Londondakı bir studiyadan",
+    "london2": "400-dən çox satış nöqtəsinə malik qlobal brendə",
+    "london3": "Avion-u yaratmağa başlayanda məqsədimiz sadə idi. Yüksək keyfiyyətli mebeli",
+    "london4": "kütləvi bazar üçün əlçatan və münasib etmək. Əl işi, sevgi ilə hazırlanmış mebel və ev əşyaları bizim ehtirasımızdır, buna görə də Çelsidəki butikimiz London interyer dizayn icmasının mərkəzinə çevrildi.",
+    "london5": "Əl işi, sevgi ilə hazırlanmış mebel və ev əşyaları bizim ehtirasımızdır,",
+    "london6": "buna görə də Çelsidəki butikimiz London interyer dizayn icmasının mərkəzinə çevrildi.",
+    "london7": "London interyer dizayn icmasının mərkəzinə çevrildi.",
+    "get": "Bizimlə əlaqə saxlayın",
+    "about1": "Sənətkarlıq sevgisi,",
+    "about2": "keyfiyyət və mükəmməl müştəri xidməti üzərində qurulmuş brend",
+    "about3": "Məhsullarımıza bax",
+    "about4": "Kiçik bir ideya ilə başladı",
+    "about5": "Yerində böyüyən qlobal bir brend, bizim hekayəmiz",
+    "about6": "2014-cü ilin əvvəlində Cənubi Londondakı kiçik bir studiyada başladı",
+    "about7": "Xidmətimiz sadəcə fərdi deyil,",
+    "about8": "həqiqətən unikal və mükəmməldir",
+    "about9": "Avion-u yaratmağa başlayanda məqsədimiz sadə idi. Yüksək keyfiyyətli mebeli",
+    "about10": "kütləvi bazar üçün əlçatan və münasib etmək.",
+    "about11": "Əl işi, sevgi ilə hazırlanmış mebel və ev əşyaları bizim ehtirasımızdır,",
+    "about12": "buna görə də Çelsidəki butikimiz London interyer dizayn icmasının mərkəzinə çevrildi.",
+    "about13": "London interyer dizayn icmasının mərkəzinə çevrildi.",
+    "Blog1": "Son məqalələrimizi oxuyun.",
+    "read": "Daha çox oxu",
+    "blogpost": "Bloq yazısı",
+    "contact1": "Qiymət təklifi alın",
+    "contact2": "Formanı doldurun, komandamız 24 saat ərzində sizinlə əlaqə saxlayacaq.",
+    "contact3": "Mesaj göndər",
+    "product1": "Məhsullarımız",
+    "menu": "Menyu",
+    "footer2": "Yeni gələnlər",
+    "footer3": "Ən çox satılanlar",
+    "footer4": "Son baxılanlar",
+    "footer5": "Bu həftənin populyarları",
+    "footer6": "Bütün məhsullar",
+    "footer7": "Kateqoriyalar",
+    "footer8": "Keramika",
+    "footer9": "Mebel",
+    "footer10": "Ev əşyaları",
+    "footer11": "Bitki qabları",
+    "footer12": "Stullar",
+    "footer13": "Girişim",
+    "footer14": "Şirkətimiz",
+    "footer15": "Haqqımızda",
+    "footer16": "Vakansiyalar",
+    "footer17": "Bizimlə əlaqə",
+    "footer18": "Məxfilik siyasəti",
+    "footer19": "Qaytarılma şərtləri",
+    "footer20": "Shopify",
+    "footer21": "© 2022 Avion LTD Bütün hüquqlar qorunur",
+    "exclusiveOffers": "Eksklüziv Təkliflər",
+    "freeEvents": "Ödənişsiz Tədbirlər",
+    "largeDiscounts": "Böyük Endirimlər"
 }
