--- a/locales/en.json
+++ b/locales/en.json
@@ -2,5 +2,72 @@
         "about": "About Us",
         "anasehife": "Home",
         "product": "Products",
-        "contact": "Contact"
+        "contact": "Contact",
+        "Blog": "Blog",
+        "thefuture": "The furniture brand for the",
+        "thefuture2": "future, with timeless designs",
+        "view": " View collection",
+        "introtext1": " A new era in eco friendly furniture with Avelon, the French luxury retail brand",
+        "introtext2": "  with nice fonts, tasteful colors and a beautiful way to display things digitally ",
+        "introtext3": " using modern web technologies.",
+        "brandcardtitle": "What makes our brand different",
+        "ceramictitle": "New ceramics",
+        "popularcardtitle": "Our popular products",
+        "acardiontitle": "Grow your interest here",
+        "benefittitle": " Join the club and get the benefits",
+        "benefittitle1": " Sign up for our newsletter and receive exclusive offers on new",
+        "benefittitle2": "ranges, sales, pop up stores and more",
+        "signup": "Sign Up",
+        "london1": "  From a studio in London to a global brand with",
+        "london2": "over 400 outlets",
+        "london3": "      When we started Avion, the idea was simple. Make high quality furniture",
+        "london4": " affordable and available for the mass market.  Handmade, and lovingly crafted furniture and homeware is what we live, breathe and design so our Chelsea boutique become the hotbed for the London interior design community.",
+        "london5": " Handmade, and lovingly crafted furniture and homeware is what we live,",
+        "london6": "    breathe and design so our Chelsea boutique become the hotbed for the",
+        "london7": "     London interior design community.",
+        "get": "Get in touch",
+        "about1": "A brand built on the love of craftmanship,",
+        "about2": "quality and outstanding customer service",
+        "about3": "View our products",
+        "about4": "   It started with a small idea",
+        "about5": "A global brand with local beginnings, our story begain in a",
+        "about6": " small studio in South London in early 2014",
+        "about7": "Our service isn’t just personal, it’s actually",
+        "about8": "   hyper personally exquisite",
+        "about9": "  When we started Avion, the idea was simple. Make high quality furniture",
+        "about10": " affordable and available for the mass market.",
+        "about11": " Handmade, and lovingly crafted furniture and homeware is what we live,",
+        "about12": " breathe and design so our Chelsea boutique become the hotbed for the ",
+        "about13": " London interior design community.",
+        "Blog1": "Read our latest articles and tutorials.",
+        "read": "Read More ",
+        "blogpost": "Blog Post",
+        "contact1": "Get a Quote",
+        "contact2": "Fill up the form and our team will get back to you within 24 hours.",
+        "contact3": "Send Message",
+        "product1": "Our Products",
+        "menu": "Menu",
+        "footer2": "New arrivals",
+        "footer3": "Best sellers",
+        "footer4": "Recently viewed",
+        "footer5": "Popular this week",
+        "footer6": "All products",
+        "footer7": "Categories",
+        "footer8": "Crockery",
+        "footer9": "Furniture",
+        "footer10": "Homeware",
+        "footer11": "Plant pots",
+        "footer12": "Chairs",
+        "footer13": "Venture",
+        "footer14": "Our company",
+        "footer15": "About us",
+        "footer16": "Vacancies",
+        "footer17": "Contact us",
+        "footer18": "Privacy",
+        "footer19": "Returns policy",
+        "footer20": "Shopify",
+        "footer21": "Copyright 2022 Avion LTD",
+        "exclusiveOffers": "Exclusive Offers",
+        "freeEvents": "Free Events",
+        "largeDiscounts": "Large Discounts"
 }
