--- a/locales/ru.json
+++ b/locales/ru.json
@@ -2,5 +2,72 @@
         "about": "О нас",
         "anasehife": "Главная",
         "product": "Продукты",
-        "contact": "Контакты"
+        "contact": "Контакты",
+        "Blog": "Блог",
+        "thefuture": "Бренд мебели будущего",
+        "thefuture2": "с вневременным дизайном",
+        "view": "Посмотреть коллекцию",
+        "introtext1": "Новая эра экологичной мебели с Avelon, французским брендом люксовой розничной торговли",
+        "introtext2": "с красивыми шрифтами, элегантными цветами и прекрасной цифровой презентацией товаров",
+        "introtext3": "с использованием современных веб-технологий.",
+        "brandcardtitle": "Что делает наш бренд особенным",
+        "ceramictitle": "Новая керамика",
+        "popularcardtitle": "Наши популярные товары",
+        "acardiontitle": "Развивайте свой интерес здесь",
+        "benefittitle": "Присоединяйтесь к клубу и получайте привилегии",
+        "benefittitle1": "Подпишитесь на нашу рассылку и получайте эксклюзивные предложения",
+        "benefittitle2": "на новые коллекции, распродажи, pop-up магазины и многое другое",
+        "signup": "Зарегистрироваться",
+        "london1": "От студии в Лондоне",
+        "london2": "до глобального бренда с более чем 400 магазинами",
+        "london3": "Когда мы начинали Avion, идея была проста. Сделать качественную мебель",
+        "london4": "доступной и приемлемой для массового рынка. Ручная работа, мебель и предметы интерьера, созданные с любовью – это то, чем мы живем и дышим, поэтому наш бутик в Челси стал центром лондонского сообщества дизайнеров интерьеров.",
+        "london5": "Ручная работа, мебель и предметы интерьера, созданные с любовью –",
+        "london6": "поэтому наш бутик в Челси стал центром лондонского",
+        "london7": "сообщества дизайнеров интерьеров.",
+        "get": "Связаться с нами",
+        "about1": "Бренд, основанный на любви к ремеслу,",
+        "about2": "качеству и исключительному обслуживанию клиентов",
+        "about3": "Посмотреть наши товары",
+        "about4": "Все началось с маленькой идеи",
+        "about5": "Глобальный бренд с местными корнями, наша история началась",
+        "about6": "в маленькой студии в Южном Лондоне в начале 2014 года",
+        "about7": "Наш сервис не просто персонализирован, он",
+        "about8": "действительно исключительно индивидуален",
+        "about9": "Когда мы начинали Avion, идея была проста. Сделать качественную мебель",
+        "about10": "доступной и приемлемой для массового рынка.",
+        "about11": "Ручная работа, мебель и предметы интерьера, созданные с любовью –",
+        "about12": "поэтому наш бутик в Челси стал центром лондонского",
+        "about13": "сообщества дизайнеров интерьеров.",
+        "Blog1": "Читайте наши последние статьи и уроки.",
+        "read": "Читать далее",
+        "blogpost": "Публикация в блоге",
+        "contact1": "Получить предложение",
+        "contact2": "Заполните форму, и наша команда свяжется с вами в течение 24 часов.",
+        "contact3": "Отправить сообщение",
+        "product1": "Наши товары",
+        "menu": "Меню",
+        "footer2": "Новинки",
+        "footer3": "Хиты продаж",
+        "footer4": "Недавно просмотренные",
+        "footer5": "Популярные на этой неделе",
+        "footer6": "Все товары",
+        "footer7": "Категории",
+        "footer8": "Керамика",
+        "footer9": "Мебель",
+        "footer10": "Товары для дома",
+        "footer11": "Горшки для растений",
+        "footer12": "Стулья",
+        "footer13": "Предпринимательство",
+        "footer14": "О компании",
+        "footer15": "О нас",
+        "footer16": "Вакансии",
+        "footer17": "Контакты",
+        "footer18": "Политика конфиденциальности",
+        "footer19": "Политика возврата",
+        "footer20": "Shopify",
+        "footer21": "© 2022 Avion LTD Все права защищены",
+        "exclusiveOffers": "Эксклюзивные предложения",
+        "freeEvents": "Бесплатные мероприятия",
+        "largeDiscounts": "Большие скидки"
 }
