--- a/locales/az.json
+++ b/locales/az.json
@@ -11,7 +11,7 @@
     "introtext2": "gözəl şriftlər, zərif rənglər və rəqəmsal dünyada məhsulların mükəmməl təqdimatı ilə",
     "introtext3": "müasir veb texnologiyalarından istifadə edərək.",
     "brandcardtitle": "Brendimizi fərqləndirən nədir",
-    "ceramictitle": "Yeni keramikalar",
+    "ceramictitle": "Yeni kolleksiya",
     "popularcardtitle": "Ən məşhur məhsullarımız",
     "acardiontitle": "Burada marağınızı artırın",
     "benefittitle": "Kluba qoşulun və üstünlüklərdən yararlanın",
@@ -65,7 +65,7 @@
     "footer17": "Bizimlə əlaqə",
     "footer18": "Məxfilik siyasəti",
     "footer19": "Qaytarılma şərtləri",
-    "footer20": "Shopify",
+    "footer20": "Avion",
     "footer21": "© 2022 Avion LTD Bütün hüquqlar qorunur",
     "exclusiveOffers": "Eksklüziv Təkliflər",
     "freeEvents": "Ödənişsiz Tədbirlər",
