--- a/locales/en.json
+++ b/locales/en.json
@@ -11,7 +11,7 @@
         "introtext2": "  with nice fonts, tasteful colors and a beautiful way to display things digitally ",
         "introtext3": " using modern web technologies.",
         "brandcardtitle": "What makes our brand different",
-        "ceramictitle": "New ceramics",
+        "ceramictitle": "New collection",
         "popularcardtitle": "Our popular products",
         "acardiontitle": "Grow your interest here",
         "benefittitle": " Join the club and get the benefits",
@@ -65,7 +65,7 @@
         "footer17": "Contact us",
         "footer18": "Privacy",
         "footer19": "Returns policy",
-        "footer20": "Shopify",
+        "footer20": "Avion",
         "footer21": "Copyright 2022 Avion LTD",
         "exclusiveOffers": "Exclusive Offers",
         "freeEvents": "Free Events",
