--- a/locales/ru.json
+++ b/locales/ru.json
@@ -11,7 +11,7 @@
         "introtext2": "с красивыми шрифтами, элегантными цветами и прекрасной цифровой презентацией товаров",
         "introtext3": "с использованием современных веб-технологий.",
         "brandcardtitle": "Что делает наш бренд особенным",
-        "ceramictitle": "Новая керамика",
+        "ceramictitle": "Новая коллекция",
         "popularcardtitle": "Наши популярные товары",
         "acardiontitle": "Развивайте свой интерес здесь",
         "benefittitle": "Присоединяйтесь к клубу и получайте привилегии",
@@ -65,7 +65,7 @@
         "footer17": "Контакты",
         "footer18": "Политика конфиденциальности",
         "footer19": "Политика возврата",
-        "footer20": "Shopify",
+        "footer20": "Avion",
         "footer21": "© 2022 Avion LTD Все права защищены",
         "exclusiveOffers": "Эксклюзивные предложения",
         "freeEvents": "Бесплатные мероприятия",
