--- a/locales/az.json
+++ b/locales/az.json
@@ -69,5 +69,14 @@
     "footer21": "© 2022 Avion LTD Bütün hüquqlar qorunur",
     "exclusiveOffers": "Eksklüziv Təkliflər",
     "freeEvents": "Ödənişsiz Tədbirlər",
-    "largeDiscounts": "Böyük Endirimlər"
+    "largeDiscounts": "Böyük Endirimlər",
+    "sebet":"Səbət",
+    "sebetbosdur":"Səbət boşdur.",
+    "qiymet":"Qiymət",
+    "sil":"Sil",
+    "umumimebleg":"Ümumi məbləğ",
+    "sebetitemizle":"Səbəti Təmizlə",
+    "sebeteelave":" Səbətə əlavə et",
+    "mehsulabax":" Məhsula Bax"
+
 }
