--- a/locales/en.json
+++ b/locales/en.json
@@ -69,5 +69,13 @@
         "footer21": "Copyright 2022 Avion LTD",
         "exclusiveOffers": "Exclusive Offers",
         "freeEvents": "Free Events",
-        "largeDiscounts": "Large Discounts"
+        "largeDiscounts": "Large Discounts",
+        "sebet": "Cart",
+        "sebetbosdur": "The cart is empty.",
+        "qiymet": "Price",
+        "sil": "Remove",
+        "umumimebleg": "Total amount",
+        "sebetitemizle": "Clear Cart",
+        "sebeteelave": "Add to Cart",
+        "mehsulabax": "View Product"
 }
