--- a/locales/ru.json
+++ b/locales/ru.json
@@ -77,5 +77,15 @@
         "umumimebleg": "Общая сумма",
         "sebetitemizle": "Очистить корзину",
         "sebeteelave": "Добавить в корзину",
-        "mehsulabax": "Посмотреть продукт"
+        "mehsulabax": "Посмотреть продукт",
+        "firstName": "Имя",
+    "lastName": "Фамилия",
+    "email": "Электронная почта",
+    "phone": "Телефон",
+    "message": "Сообщение",
+    "sendMessage": "Отправить сообщение",
+    "required": "Это поле обязательно",
+    "invalidEmail": "Неверный формат электронной почты",
+    "invalidPhone": "Телефон должен содержать 10 цифр",
+    "success": "Сообщение успешно отправлено!"
 }
